--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -1,4 +1,4 @@
-@inproceedings{BadNL,
+@misc{BadNL,
   doi       = {10.1145/3485832.3485837},
   url       = {https://doi.org/10.1145%2F3485832.3485837},
   year      = 2021,
@@ -10,7 +10,7 @@
   booktitle = {Annual Computer Security Applications Conference}
 }
 
-@article{DBLP,
+@article{DBLP:2007.02343,
   author     = {Yunfei Liu and
                 Xingjun Ma and
                 James Bailey and
@@ -59,7 +59,12 @@
 @misc{ALBERT,
   doi       = {10.48550/ARXIV.1909.11942},
   url       = {https://arxiv.org/abs/1909.11942},
-  author    = {Lan, Zhenzhong and Chen, Mingda and Goodman, Sebastian and Gimpel, Kevin and Sharma, Piyush and Soricut, Radu},
+  author    = {Zhenzhong Lan and
+               Mingda Chen  and
+               Sebastian Goodman and
+               Kevin Gimpel and
+               Piyush Sharma and
+               Radu Soricut},
   keywords  = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
   title     = {ALBERT: A Lite BERT for Self-supervised Learning of Language Representations},
   publisher = {arXiv},
@@ -67,3 +72,97 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@article{DBLP:2012.07805,
+  author     = {Nicholas Carlini and
+                Florian Tram{\`{e}}r and
+                Eric Wallace and
+                Matthew Jagielski and
+                Ariel Herbert{-}Voss and
+                Katherine Lee and
+                Adam Roberts and
+                Tom B. Brown and
+                Dawn Song and
+                {\'{U}}lfar Erlingsson and
+                Alina Oprea and
+                Colin Raffel},
+  title      = {Extracting Training Data from Large Language Models},
+  journal    = {CoRR},
+  volume     = {abs/2012.07805},
+  year       = {2020},
+  url        = {https://arxiv.org/abs/2012.07805},
+  eprinttype = {arXiv},
+  eprint     = {2012.07805},
+  timestamp  = {Sat, 02 Jan 2021 15:43:30 +0100},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2012-07805.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{CW_Weights,
+  doi       = {10.48550/ARXIV.2212.08121},
+  url       = {https://arxiv.org/abs/2212.08121},
+  author    = {Khondoker Murad Hossain and 
+               Time Oates},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Backdoor Attack Detection in Computer Vision by Applying Matrix Factorization on the Weights of Deep Networks},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{PlugNPlay,
+  author     = {Sumanth Dathathri and
+                Andrea Madotto and
+                Janice Lan and
+                Jane Hung and
+                Eric Frank and
+                Piero Molino and
+                Jason Yosinski and
+                Rosanne Liu},
+  title      = {Plug and Play Language Models: {A} Simple Approach to Controlled Text
+                Generation},
+  journal    = {CoRR},
+  volume     = {abs/1912.02164},
+  year       = {2019},
+  url        = {http://arxiv.org/abs/1912.02164},
+  eprinttype = {arXiv},
+  eprint     = {1912.02164},
+  timestamp  = {Thu, 02 Jan 2020 18:08:18 +0100},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-1912-02164.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{GPT,
+  added-at  = {2020-07-14T16:37:42.000+0200},
+  author    = {Alec Radford and
+               Karthik Narasimhan and
+               Tim Salimans and
+               Ilya Sutskever},
+  biburl    = {https://www.bibsonomy.org/bibtex/273ced32c0d4588eb95b6986dc2c8147c/jonaskaiser},
+  interhash = {5c343ed9a31ac52fd17a898f72af228f},
+  intrahash = {73ced32c0d4588eb95b6986dc2c8147c},
+  keywords  = {final thema:transformer},
+  timestamp = {2020-07-14T16:49:42.000+0200},
+  title     = {Improving language understanding by generative pre-training},
+  year      = 2018
+}
+
+@misc{Detoxify,
+  author       = {Unitary},
+  title        = {Detoxify},
+  howpublished = {https://github.com/unitaryai/detoxify},
+  year         = 2022
+}
+
+@misc{jigsaw,
+  author    = {cjadams and 
+               Jeffrey Sorensen and 
+               Julia Elliott and 
+               Lucas Dixon and 
+               Mark McDonald and 
+               nithum and 
+               Will Cukierski},
+  title     = {Toxic Comment Classification Challenge},
+  publisher = {Kaggle},
+  year      = {2017},
+  url       = {https://kaggle.com/competitions/jigsaw-toxic-comment-classification-challenge}
+}
