--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -147,10 +147,10 @@
 }
 
 @misc{Detoxify,
-  author       = {Unitary},
   title        = {Detoxify},
-  howpublished = {https://github.com/unitaryai/detoxify},
-  year         = 2022
+  author       = {Hanu, Laura and {Unitary team}},
+  howpublished = {Github. https://github.com/unitaryai/detoxify},
+  year         = {2020}
 }
 
 @misc{jigsaw,
