--- a/interim_report.tex
+++ b/interim_report.tex
@@ -27,6 +27,7 @@
 
 \input{introduction/introduction.tex}
 \input{background/background.tex}
+\input{methodology/methodology.tex}
 \input{project_plan/project_plan.tex}
 \input{ethical_issues/ethical_issues.tex}
 \input{conclusion/conclusion.tex}
