--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -166,3 +166,16 @@
   year      = {2017},
   url       = {https://kaggle.com/competitions/jigsaw-toxic-comment-classification-challenge}
 }
+
+@article{bert_self_attention,
+  title     = {Attention Mechanism with BERT for Content Annotation and Categorization of Pregnancy-Related Questions on a Community Q and A Site},
+  author    = {Luo X and
+               Ding H and
+               Tang M and
+               Gandhi P and
+               Zhang Z and
+               He Z},
+  journal   = {PubMed Central},
+  year      = {2020},
+  publisher = {National Library of Medicine}
+}
