--- a/project_plan/project_plan.tex
+++ b/project_plan/project_plan.tex
@@ -23,5 +23,5 @@ will also include reducing our interactions to black-box, inference testing to s
 the model in question.
 
 \subsection*{June 2023}
-The month of may will then be reserved for writing up the report and creating any statistics using the models required for the report to be completed by the 
+The end of the project timeline will then be reserved for writing up the report and creating any statistics using the models required for the report to be completed by the 
 19th of June 2023.
