Added section to ethical issues

--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -179,3 +179,12 @@
   year      = {2020},
   publisher = {National Library of Medicine}
 }
+
+@misc{chat_gpt_environment,
+  title        = {The Carbon Footprint of ChatGPT},
+  author       = {Kasper Groes Albin Ludvigsen},
+  howpublished = {Towards Data Science},
+  year         = {2020},
+  url          = {https://towardsdatascience.com/the-carbon-footprint-of-chatgpt-66932314627d#:~:text=Using%20the%20ML%20CO2%20Impact,carbon%20footprint%20to%2023.04%20kgCO2e.},
+  year         = {2022}
+}
